--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TraderMind - Event-driven automated trading platform" />
-  <title>TraderMind</title>
-  <link rel="icon" type="image/png" href="/tradermind-logo.png" />
+  <meta name="description" content="TraderMind - AI-Powered Automated Trading Platform" />
+  <meta name="theme-color" content="#0F172A" />
+  <title>TraderMind | AI Trading</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/logo.svg" />
 </head>
 
 <body>
